<resources>
    <string name="app_name">aisiApplication</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="association_name">隶属套图：</string>
    <string name="file_size">文件大小：</string>
    <string name="release_time">发布时间：</string>
    <string name="model">模特：</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">下载</string>
    <string name="favorites">收藏</string>
    <string name="undone">未完成</string>
    <string name="completed">已完成</string>
    <string name="waiting">等待中</string>
    <string name="not_initiated">未启动</string>
    <string name="download_all">下载所有</string>
    <string name="cancel_all">取消所有</string>
    <string name="home">主页</string>
    <string name="title_model">模特</string>
    <string name="title_association">社团</string>
</resources>