<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.picturesset.PicturesSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/roundImageView"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="啊的撒按时发送大大萨达萨达啊实打实打算带阿斯顿阿斯顿阿三大多少撒旦阿斯顿阿斯顿阿迪斯啊实打实的啊实打实的啊啊阿斯顿"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/modelNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/model"
                        android:textColor="@color/text_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/modelNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:ellipsize="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/associationNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/association_name"
                        android:textColor="@color/text_black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/associationNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:ellipsize="end" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/file_size"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/fileSizeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/text_black"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:ellipsize="end" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/release_time"
                        android:textColor="#333333"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/releaseTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/text_black"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:ellipsize="end" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/download"
                android:id="@+id/downloadButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/favorites"
                android:id="@+id/favoritesButton" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/thumbnailRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>